force-app/main/default/objects/Payment_Commitment__c/fields/Breached_Date__c.field-meta.xml
<CustomField>
    <fullName>Breached_Date__c</fullName>
    <description>The date the commitment was marked breached. Date-only rather than DateTime because the breach is a calendar-day judgement against Due_Date__c, and ARCHITECTURE.md forbids a Date suffix on a DateTime field.</description>
    <inlineHelpText>When this commitment was marked breached.</inlineHelpText>
    <label>Breached Date</label>
    <type>Date</type>
</CustomField>