force-app/main/default/objects/Payment_Commitment__c/fields/Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Type__c</fullName>
    <description>Distinguishes a one-off promise to pay from one instalment of an agreed payment plan. FSD 5.9.7 treats them differently: a missed instalment can reopen a resolved Case, a broken single promise escalates it.</description>
    <inlineHelpText>A single promise to pay, or one instalment of an agreed plan.</inlineHelpText>
    <label>Commitment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promise to Pay</fullName>
                <default>true</default>
                <label>Promise to Pay</label>
            </value>
            <value>
                <fullName>Payment Plan Instalment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>