force-app/main/default/objects/Payment_Commitment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date this commitment must be honoured by. This is the date that BREACHES ON ITS OWN - the nightly job evaluates it without waiting for any Yardi signal, which is the point of FSD 5.9.3 calling it out.</description>
    <inlineHelpText>When the payment was promised for. The nightly job breaches this on its own once the date passes.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>