force-app/main/default/objects/Payment_Commitment__c/fields/Instalment_Number__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Number__c</fullName>
    <description>Position of this instalment within an agreed payment plan (1, 2, 3...). Blank for a one-off promise to pay. Number rather than text so plans sort correctly.</description>
    <inlineHelpText>Which instalment of the plan this is. Leave blank for a one-off promise.</inlineHelpText>
    <label>Instalment Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>