force-app/main/default/objects/Payment_Commitment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Context for this specific commitment (terms agreed, who agreed them). NOT the follow-up trail - FSD 5.9.1 records that an overwritten notes column is the pain being removed, so the append-only timeline lives in Case Comments on the parent Case.</description>
    <inlineHelpText>Context for this commitment only. Log follow-up on the Case, not here.</inlineHelpText>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>