force-app/main/default/objects/Payment_Commitment__c/fields/Promised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promised_Amount__c</fullName>
    <description>The amount the tenant committed to pay by the due date. Suffixed Amount because it is a total, per the ARCHITECTURE.md currency naming rule.</description>
    <inlineHelpText>How much the tenant committed to pay by the due date.</inlineHelpText>
    <label>Promised Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>