force-app/main/default/objects/Payment_Commitment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current state of the commitment. Kept and Breached are terminal; Cancelled records a commitment withdrawn by agreement rather than broken.</description>
    <inlineHelpText>Open until it is honoured, breached or cancelled.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Kept</fullName>
            </value>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>